--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.wlwl.cube.analyse</groupId>
-	<artifactId>analysis</artifactId>
+	<groupId>com.wlwl.cube.analyseAlarm</groupId>
+	<artifactId>analysis_alarm</artifactId>
 	<version>1.0.0</version>
-	<name>analysis</name>
+	<name>analysis_alarm</name>
 	<description>分析cube系统的动态数据</description>
 
 	<properties>
@@ -14,10 +14,9 @@
 		<storm.version>1.0.2</storm.version>
 	</properties>
 	
-	<build>
-		<sourceDirectory>src/main/java</sourceDirectory>
-		<plugins>
-			<plugin>
+		<build>
+    <plugins>
+    		<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -27,45 +26,27 @@
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
-			
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix></classpathPrefix>
-							<mainClass>com.wlwl.cube.analyse.topology.TridentKafkaTopology</mainClass>
-						</manifest>
-					</archive>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<executions>
-					<execution>
-						<id>copy</id>
-						<phase>install</phase>
-						<goals>
-							<goal>copy-dependencies</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>
-								/
-							</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-resources-plugin</artifactId> 
-				<version>2.2</version> <configuration> <encoding>UTF-8</encoding> </configuration> 
-				</plugin> -->
-		</plugins>
-	</build>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.4</version>
+        <configuration>
+          <archive>
+            <manifest>
+              <mainClass>com.wlwl.one.ServerMain</mainClass>
+            </manifest>
+          </archive>
+          <descriptorRefs>
+            <descriptorRef>
+              jar-with-dependencies
+            </descriptorRef>
+          </descriptorRefs>
+        </configuration>
+      </plugin>
+    
+    </plugins>
+  </build>
 
-
+ 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.storm</groupId>
